Debug overlapping issue

--- a/src/components/Cell/Cell.scss
+++ b/src/components/Cell/Cell.scss
@@ -103,6 +103,10 @@
   }
 }
 
+.disable-scale {
+  z-index: 30;
+}
+
 .hidden {
   visibility: hidden;
 }
